--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = kabbes_user_profile
-version = 0.1.0
+version = 0.2.0
 author = James Kabbes
 author_email = james.kabbes@gmail.com
 description = Universal naming system and varaible stroage for better collaboration
@@ -20,6 +20,11 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires = 
+    kabbes_py_starter
+    kabbes_parent_class
+    kabbes_dir_ops>
+
 
 [options.packages.find]
 where = src
