fixing small typo

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = kabbes_user_profile
-version = 0.2.0
+version = 0.3.0
 author = James Kabbes
 author_email = james.kabbes@gmail.com
 description = Universal naming system and varaible stroage for better collaboration
@@ -23,7 +23,7 @@ python_requires = >=3.6
 install_requires = 
     kabbes_py_starter
     kabbes_parent_class
-    kabbes_dir_ops>
+    kabbes_dir_ops
 
 
 [options.packages.find]
