--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = kabbes_user_profile
-version = 0.3.0
+version = 0.4.0
 author = James Kabbes
 author_email = james.kabbes@gmail.com
 description = Universal naming system and varaible stroage for better collaboration
@@ -18,7 +18,10 @@ classifiers =
 [options]
 package_dir =
     = src
-packages = find:
+packages = 
+    user_profile
+    user_profile.Templates
+    user_profile.Users
 python_requires = >=3.6
 install_requires = 
     kabbes_py_starter
