updating changes with kabbes_config

--- a/src/user_profile/CONFIG.json
+++ b/src/user_profile/CONFIG.json
@@ -12,7 +12,7 @@
     },
     "profiles":{
         "!Dir":{
-            "$ref": "{{cache.package.Dir}}",
+            "$ref": "{{package.config.cache.Dir}}",
             "method":{
                 "name": "join_Dir",
                 "kwargs":{
