--- a/setup.cfg
+++ b/setup.cfg
@@ -18,10 +18,7 @@ classifiers =
 [options]
 package_dir =
     = src
-packages = 
-    user_profile
-    user_profile.Templates
-    user_profile.Users
+packages = find:
 python_requires = >=3.7
 install_requires = 
     kabbes_py_starter
